# WheelBuilder

./: .gitignore  pyproject.toml
.github/workflows/: build_wheel.yml  r2-upload.yml  weekly_updates.yml
src/wheelbuilder/: __main__.py  builder.py  cli.py  patches.py  piprepo.py  platforminfo.py  platforms.py  protocols.py  registry.py  tools.py
src/wheelbuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/wheelbuilder/scripts/: libsodium.sh
src/wheelbuilder/wheels/cibuildwheel/: aiohttp.py  apsw.py  atom.py  bcrypt.py  bitarray.py  blosc2.py  cffi.py  contourpy.py  coverage.py  cryptography.py  greenlet.py  kiwisolver.py  lxml.py  materialyoucolor.py  matplotlib.py  msgpack.py  netifaces.py  numpy.py  opencv.py  orjson.py  pandas.py  pillow.py  pycryptodome.py  pymunk.py  pynacl.py  pyzmq.py  regex.py  sqlalchemy.py  ujson.py  zeroconf.py
src/wheelbuilder/wheels/maturin/: pendulum.py  pydantic_core.py
